--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.167.1",
     "next": "14.2.5",
+    "next-qrcode": "^2.5.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
