--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
+
   },
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.167.1",
+    "firebase": "^10.12.5",
+    "firebase-cli": "^1.2.0",
     "next": "14.2.5",
     "next-qrcode": "^2.5.1",
     "react": "^18",
