--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export"
-
   },
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.167.1",
+    "app": "file:",
     "firebase": "^10.12.5",
     "firebase-cli": "^1.2.0",
     "next": "14.2.5",
