--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
