--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/three": "^0.167.1",
     "app": "file:",
     "firebase": "^10.12.5",
@@ -21,7 +22,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-webcam": "^7.2.0",
+    "redux": "^5.0.1",
     "use-sound": "^4.0.3"
   },
   "devDependencies": {
