--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.12.5",
     "firebase-cli": "^1.2.0",
     "next": "14.2.5",
+    "next-pwa": "^5.6.0",
     "next-qrcode": "^2.5.1",
     "react": "^18",
     "react-dom": "^18",
